--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,9 @@
     </div>
 
     <button class="start">Play !</button>
+
+    <div class="loose-container">
+        <span class="loose">You Loose !!</span>
+    </div>
   </body>
 </html>
